--- a/public/index.html
+++ b/public/index.html
@@ -16,33 +16,95 @@
       }
     }
   </script>
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-  <link href="./dist/styles.css" rel="stylesheet">
+  <link href="/dist/styles.css" rel="stylesheet">
   <title>The Writer Next Door</title>
 </head>
 
 <body>
-  <header class="py-4">
+  <header class="">
 
-    <nav class="container mx-auto">
-      <div class="text-indigo-800 font-semibold text-lg">THE WRITER</div>
-      <ul class="flex item">
-        <li><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#projects">Projects</a></li>
+    <nav class="container mx-auto grid grid-cols-2 lg:grid-cols-3 items-center p-4">
+      <div class="">
+        <div class="text-indigo-800 font-bold text-xl flex items-center gap-4"><img src="./assets/logo.png" alt="Download Cv" class="w-6 h-6 object-contain rounded-md border"><span>T.W.N.D</span></div>
+        <div class="text-gray-500 text-xs">Invest in the success of your content</div>
+      </div>
+      <ul class="hidden lg:flex items-center justify-center gap-4">
+        <li><a href="#" class="text-gray-500">Home</a></li>
+        <li><a href="#about" class="text-gray-500">About</a></li>
+        <li><a href="#contact" class="text-gray-500">Contact</a></li>
+        <li><a href="#projects" class="text-gray-500">Projects</a></li>
+        <li>
+          <div class="flex gap-4 items-center">
+
+          </div>
+        </li>
       </ul>
+      <div class="flex justify-end">
+        <button class="lg:hidden"><img src="./assets/menu.png" alt="Menu" class="w-6 h-6 object-contain"></button>
+        <a href="" download class="hidden bg-indigo-800 rounded-md px-4 py-2 text-white lg:flex flex-nowrap items-center gap-3">Download CV <img src="./assets/download.png" alt="Download Cv" class="w-6 h-6 object-contain"></a>
+      </div>
     </nav>
   </header>
   <main>
 
-    <h1 class="text-3xl font-bold">
-      Hello world!
-    </h1>
+    <section class="bg-gray-100">
+      <div class="container mx-auto p-4">
+        <div class="grid gap-4 grid-cols-1 lg:grid-cols-2 items-center py-10 min-h-[80vh]">
+          <div>
+            <div class="text-5xl mb-5">I'M <span class="text-indigo-800 text-5xl font-bold ms-4">Loba Ridwan</span></div>
+            <div class="text-lg">
+              I'm a skilled ghostwriter, proofreader and editor. Easing the burden of students, job-seekers and startups with research projects, excellent resumes and valuable web content.
+            </div>
+            <div></div>
+          </div>
+          <div></div>
+        </div>
+
+      </div>
+    </section>
+    <section class="">
+      <div class="container mx-auto p-4">
+        <div class="text-center mb-5 font-semibold text-2xl text-indigo-800">About Me</div>
+
+
+      </div>
+    </section>
+    <section class="">
+      <div class="container mx-auto p-4">
+        <div class="text-center mb-5 font-semibold text-2xl text-indigo-800">Services</div>
+
+
+      </div>
+    </section>
+    <section class="bg-gray-100 py-8">
+      <div class="container mx-auto p-4">
+        <div class="text-center mb-5 font-semibold text-2xl text-indigo-800">Contact</div>
+
+
+      </div>
+    </section>
   </main>
-  <script src="./dist/app.js" defer></script>
+  <footer>
+    <div class="container mx-auto p-4">
+      <ul class="flex items-center justify-center gap-4 mb-3">
+        <li><a href="#" class="text-gray-500">Home</a></li>
+        <li><a href="#about" class="text-gray-500">About</a></li>
+        <li><a href="#contact" class="text-gray-500">Contact</a></li>
+        <li><a href="#projects" class="text-gray-500">Projects</a></li>
+        <li>
+          <div class="flex gap-4 items-center">
+
+          </div>
+        </li>
+      </ul>
+      <div class="text-center text-sm font-medium text-gray-500">&copy;<span id="year"></span> Loba Ridwan. All rights reserved</div>
+    </div>
+  </footer>
+  <script src="/dist/app.js" defer></script>
 </body>
 
 </html>
