--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-  <link href="/dist/styles.css" rel="stylesheet">
+  <link href="../dist/styles.css" rel="stylesheet">
   <title>The Writer Next Door</title>
 </head>
 
@@ -104,7 +104,7 @@
       <div class="text-center text-sm font-medium text-gray-500">&copy;<span id="year"></span> Loba Ridwan. All rights reserved</div>
     </div>
   </footer>
-  <script src="/dist/app.js" defer></script>
+  <script src="../dist/app.js" defer></script>
 </body>
 
 </html>
