--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Open Graph (OG) Meta Tags -->
+  <meta property="og:title" content="TheWriterNextDoor">
+  <meta property="og:description" content="Skilled ghostwriter, proofreader and editor. Easing the burden of students, job-seekers and startups with research projects, excellent resumes and valuable web content.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://thewriternextdoor.netlify.app">
+  <meta property="og:image" content="https://thewriternextdoor.netlify.app/assets/logo.png">
+  <meta property="og:site_name" content="TheWriterNextDoor">
+  <meta property="og:locale" content="en_US">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="TheWriterNextDoor">
+  <meta name="twitter:description" content="Skilled ghostwriter, proofreader and editor. Easing the burden of students, job-seekers and startups with research projects, excellent resumes and valuable web content.">
+  <meta name="twitter:image" content="https://thewriternextdoor.netlify.app/assets/logo.png">
+  <meta name="twitter:url" content="https://thewriternextdoor.netlify.app">
+
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -21,7 +37,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <link href="../dist/styles.css" rel="stylesheet">
-  <title>The Writer Next Door</title>
+  <title>TheWriterNextDoor</title>
 </head>
 
 <body>
