--- a/public/index.html
+++ b/public/index.html
@@ -82,17 +82,47 @@
 
       </div>
     </section>
-    <section class="">
+    <section class="py-10">
       <div class="container mx-auto p-4">
-        <div class="text-center mb-5 font-semibold text-2xl text-indigo-800">About Me</div>
-
-
+        <div class="mb-10 font-semibold text-3xl text-indigo-800 font-serif">About Me</div>
+        <div>
+          Loba Ridwan is a skilled ghostwriter, proofreader, editor. Easing the burden of students, job-seekers and startups with research projects, excellent resumes and valuable web content constitute his stronghold. Ridwan uses quality and properly formatted content to bridge the gap between a brand’s values and clients' needs on a timely target. The Writer Next Door is an agency for content development, with a mission to serve and provide technical solutions with specialized writing service and judicious use of information.
+        </div>
       </div>
     </section>
-    <section class="">
+    <section class="py-10">
       <div class="container mx-auto p-4">
-        <div class="text-center mb-5 font-semibold text-2xl text-indigo-800">Services</div>
-
+        <div class="mb-10 font-semibold text-3xl text-indigo-800 font-serif">Services</div>
+        <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-4">
+          <div class="flex flex-col items-center">
+            <div class="w-24 h-24 bg-indigo-800 flex justify-center items-center mb-5 rounded-full">
+              <img src="./assets/write-4.png" alt="Menu" class="w-12 h-12 object-contain">
+            </div>
+            <div class="text-center font-semibold mb-3 text-xl">Content Writing</div>
+            <div class="text-center">Use my writing service to create optimized resumes, business plans, and LinkedIn profiles</div>
+          </div>
+          <div class="flex flex-col items-center">
+            <div class="w-24 h-24 bg-indigo-800 flex justify-center items-center mb-5 rounded-full">
+              <img src="./assets/write-1.png" alt="Menu" class="w-12 h-12 object-contain">
+            </div>
+            <div class="text-center font-semibold mb-3 text-xl">Technical Writing</div>
+            <div class="text-center">Simplify your tasks with clear, precise writing for user manuals, press releases, and white papers.</div>
+          </div>
+          <div class="flex flex-col items-center">
+            <div class="w-24 h-24 bg-indigo-800 flex justify-center items-center mb-5 rounded-full">
+              <img src="./assets/write-2.png" alt="Menu" class="w-12 h-12 object-contain">
+            </div>
+            <div class="text-center font-semibold mb-3 text-xl">Business Writing</div>
+            <div class="text-center">Creates compelling business plans and global market strategies for long-term growth.</div>
+          </div>
+          <div class="flex flex-col items-center">
+            <div class="w-24 h-24 bg-indigo-800 flex justify-center items-center mb-5 rounded-full">
+              <img src="./assets/write-3.png" alt="Menu" class="w-12 h-12 object-contain">
+            </div>
+            <div class="text-center font-semibold mb-3 text-xl">Creative Writing</div>
+            <div class="text-center">Explore an award-winning poet’s archive and let us captivate your audience with storytelling and rhythmic, rhetorical writing.</div>
+          </div>
+        </div>
 
       </div>
     </section>
