--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
         <div class="grid gap-4 grid-cols-1 lg:grid-cols-2 items-center py-10 min-h-[80vh]">
           <div>
             <div class="text-5xl mb-5">I'M <span class="text-indigo-800 text-5xl font-bold ms-4">Loba Ridwan</span></div>
-            <div class="text-lg">
+            <div class="text-xl">
               I'm a skilled ghostwriter, proofreader and editor. Easing the burden of students, job-seekers and startups with research projects, excellent resumes and valuable web content.
             </div>
             <div></div>
@@ -85,7 +85,7 @@
     <section class="py-10">
       <div class="container mx-auto p-4">
         <div class="mb-10 font-semibold text-3xl text-indigo-800 font-serif">About Me</div>
-        <div>
+        <div class="text-xl">
           Loba Ridwan is a skilled ghostwriter, proofreader, editor. Easing the burden of students, job-seekers and startups with research projects, excellent resumes and valuable web content constitute his stronghold. Ridwan uses quality and properly formatted content to bridge the gap between a brand’s values and clients' needs on a timely target. The Writer Next Door is an agency for content development, with a mission to serve and provide technical solutions with specialized writing service and judicious use of information.
         </div>
       </div>
